<resources>
    <string name="app_name">BuildingAreaFinder</string>
    <string name="title_activity_maps">BuildingAreaFinder</string>
    <string name="custom_marker_remove">Remove</string>
    <string name="distance">Distance</string>
    <string name="hybridmenu">Hybrid map</string>
    <string name="normalmenu">Normal map</string>
    <string name="satellitemenu">Satellite map</string>
    <string name="terrainmenu">Terrain map</string>
    <string name="removemenu">Remove all</string>
    <string name="settings">Settings</string>
    <string name="defaultsolar">By default a standard panel with 254 sq ft is choosen to change go to settings option under menu for reference try this <a href="http://news.energysage.com/how-many-solar-panels-do-i-need/">page</a></string>
</resources>
